[package]
name = "generic-timer"
description = "Driver for ARM Generic Timer with embassy support"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Artur Kowalski <arturkow2000@gmail.com>"]
repository = "https://github.com/arturkow2000/generic-timer"
keywords = ["no-std"]

[features]
embassy_cp15 = [
    "dep:critical-section",
    "dep:embassy-time",
    "dep:embassy-sync"
]

[dependencies.critical-section]
version = "1"
optional = true

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
version = "0.1.0"
optional = true

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
version = "0.1.0"
optional = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"
